syntax = "proto3";

package io.mystore.cart.view;

import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";
import "io/mystore/cart/entity/shopping_cart_entity.proto";
import "io/mystore/cart/api/shopping_cart_api.proto";
import "io/mystore/cart/view/cart.proto";

option java_outer_classname = "CartsByCustomerModel";

service CartsByCustomer {
  option (akkaserverless.service) = {
    type: SERVICE_TYPE_VIEW
  };

  rpc GetCartsByCustomer(GetCartsRequest) returns (GetCartsResponse) {
    option (akkaserverless.method).view.query = {
      query: "SELECT * AS carts"
             "  FROM carts_by_customer"
             " WHERE customer_id = :customer_id"
    };
    option (google.api.http) = {
      post: "/carts-by-customer",
      body: "*"
    };
  }

  rpc ProcessItemAdded(entity.ItemAdded) returns (Cart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "carts_by_customer"
      transform_updates: true
    };
  }

  rpc ProcessItemChanged(entity.ItemChanged) returns (Cart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "carts_by_customer"
      transform_updates: true
    };
  }

  rpc ProcessItemRemoved(entity.ItemRemoved) returns (Cart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "carts_by_customer"
      transform_updates: true
    };
  }

  rpc ProcessCartCheckedOut(entity.CartCheckedOut) returns (Cart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "carts_by_customer"
      transform_updates: true
    };
  }

  rpc ProcessCartShipped(entity.CartShipped) returns (Cart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "carts_by_customer"
      transform_updates: true
    };
  }

  rpc ProcessCartDelivered(entity.CartDelivered) returns (Cart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "carts_by_customer"
      transform_updates: true
    };
  }

  rpc ProcessCartDeleted(entity.CartDeleted) returns (Cart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "carts_by_customer"
      transform_updates: true
    };
  }

  rpc ProcessDatesChanged(entity.DatesChanged) returns (Cart) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "carts_by_customer"
      transform_updates: true
    };
  }
}

message GetCartsRequest {
  string customer_id = 1;
}

message GetCartsResponse {
  repeated Cart carts = 1;
}
